--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     </div>
     <div class="footer">
-        <div>Copyright © The Odin Project 2021</div>
+        <div>Copyright © Get Fit 2022</div>
     </div>
 </body>
 </html>
